Bug 170452 - FILESAVE: XLS -> XLSX external references in Data Validation are not exported in workbook.xml
Summary: FILESAVE: XLS -> XLSX external references in Data Validation are not exported...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.8.0 target:26.2.2
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-23 13:04 UTC by Karthik
Modified: 2026-02-26 16:23 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
XLS File (35.00 KB, application/vnd.ms-excel)
2026-01-23 13:05 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2026-01-23 13:04:29 UTC
Description:
Open the attached XLS file and save it as XLSX, Excel throws an error when opening the resulting file

In the first sheet, cell E10 has data validation with external reference.

When exported to XLSX, this external reference is properly exported in data validation but the associated external reference is not exported in workbook.xml. Because of this, the external reference in data validation has out of range index.

Steps to Reproduce:
1. Open the attached XLS file
2. Save it as XLSX
3. Open the resulting file in Excel

Actual Results:
Excel throws an error when opening the file

Expected Results:
Excel opens the file without any error


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Calc: threaded
Comment 1 Karthik 2026-01-23 13:05:39 UTC
Created attachment 205152 [details]
XLS File
Comment 2 Commit Notification 2026-02-16 02:20:01 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fbc4e2db2a3ffbaa9b91b4a30a494443cb98d821

tdf#170452: Export external refs of Data Validation

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-02-26 16:23:13 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/f8bbe783e112805bfa51e7f8bd3c0e3e54840280

tdf#170452: Export external refs of Data Validation

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.