tdf#170452: Export external refs of Data Validation

External references used in data validation are not exported. To export
External references they should be registered with XclExpLinkManager.

Add explicit function call to XclExpFormulaCompiler::CreateFormula,
this will eventually call XclExpLinkManager::FindExtSheet, which is used
to register external refs.

bug-document: forum-mso-de-39647.xls

Change-Id: I0f010f0b5e990ba098361996598d7363647b05ba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197954
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
(cherry picked from commit 97c290624f6e0d992ea5a075f316405dcfca8d38)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199427
Tested-by: Jenkins
Reviewed-by: Karthik Godha <karthik.godha@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199664